<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">公众号采集器</string>
    <string name="service_label">通知采集服务</string>
    <string name="service_summary">在微信里复制公众号文章链接时自动收录</string>
    <string name="service_desc">开启后，你在微信里对公众号文章使用“复制链接”时会自动收录该文章（只读剪贴板和当前窗口，不上传任何数据）。</string>
    <string name="btn_clip">从剪贴板一键采集</string>
    <string name="btn_service">① 开启采集服务（无障碍）</string>
    <string name="btn_folder">② 选择保存文件夹（选 Luyuan 自动同步）</string>
    <string name="btn_add">采集这条链接</string>
    <string name="btn_clear">清空本地记录</string>
    <string name="hint_input">也可以手动粘贴文章链接（mp.weixin.qq.com 开头）</string>
    <string name="list_header">最近采集</string>
</resources>
